--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "testing-drills",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "mocha",
-    "start": "node index.js",
-    "dev": "nodemone server.js"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
